changed style relation

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/finalstyle.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>My Datastory</title>
   </head>
   <body>
