--- a/index.html
+++ b/index.html
@@ -5,28 +5,26 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>My Datastory</title>
   </head>
+
+
   <body>
 
     <header>
 
       <h1>My Datastory</h1>
 
-      // insert js gallery here
-
     </header>
 
-
     <p>
-      IntroIntroIntro IntroIntroIntroInt roIntroInt roIntroIntroIntroIntroIntroI
-       ntroIntroIntroIntroIntroIntroInt roIntroIntroIntroIntroIn troIntroIntroIntr
-      oIntroIntroIntroI ntroIntroIntr oIntroIntro
+      This is the three-stage process of how I found my life to be intertwined
+      with data, writing, and digital media.
     </p>
 
     <div class="section">
 
       <div class="image">
 
-          <a href="#"> <img src="http://via.placeholder.com/150x150" alt=""> </a>
+          <a href="#"> <img src="assets/img/data.PNG" alt=""> </a>
 
 
       </div>
@@ -34,11 +32,12 @@
 
       <div class="headPara">
 
-        <h2>Data Viz</h2>
+        <h2>Data Collection</h2>
 
         <p>
-
-          DATA Viz PARAGRAPH
+          To begin to uncover the connection between data and I, I chose
+          to focus on something that has always been, and will always be,
+          an integral part of my life: Music.
 
         </p>
 
@@ -54,7 +53,7 @@
 
       <div class="image">
 
-        <a href="#"> <img src="http://via.placeholder.com/150x150" alt=""> </a>
+        <a href="assets/img/finalsvg.svg"> <img src="assets/img/datavizbetterfinal.png" alt=""> </a>
 
       </div>
 
