--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
+<!--
+
+  Index.html
+  - head
+  - body
+    + header
+    +
+
+
+
+
+
+
+ -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -15,33 +29,44 @@
 
     </header>
 
-    <p>
+    <p id="intro">
       This is the three-stage process of how I found my life to be intertwined
-      with data, writing, and digital media.
+      with data, writing, and digital media. I explored how music is an
+      example of how something so seemingly unquantifiable can
+       display a significant trend and further add to how
+      the internet can infringe on my privacy.
     </p>
 
-    <div class="section">
+    <div class="section" id="dataCollect">
+
+      <h2>Data Collection</h2>
 
       <div class="image">
 
-          <a href="#"> <img src="assets/img/data.PNG" alt=""> </a>
+          <a href="assets/img/data.PNG" target="_blank"> <img src="assets/img/data.PNG" alt=""> </a>
 
 
       </div>
 
 
-      <div class="headPara">
 
-        <h2>Data Collection</h2>
 
         <p>
           To begin to uncover the connection between data and I, I chose
           to focus on something that has always been, and will always be,
-          an integral part of my life: Music.
+          an integral part of my life: Music. I noticed that throughout my
+          day, I listen to all kinds of music. However, my music is
+          constantly interrupted due to scheduled activity. <br><br>I chose to record what song type I listened to and
+          how I felt at that time on a scale of 1-10. I only chose to record the
+          first song of every session because it is chosen and meaningful
+          rather than a shuffle of my playlist. I then added several other factors
+          such as the time of day, temperature, and stress level. This table is
+          the result of consistently recording my music and corresponding mood
+          for a week.
 
         </p>
 
-      </div>
+
 
 
 
@@ -49,33 +74,36 @@
 
     </div>
 
-    <div class="section">
+    <div class="section" id="dataViz">
+
+      <h2>Data Visualization</h2>
 
       <div class="image">
 
-        <a href="assets/img/finalsvg.svg"> <img src="assets/img/datavizbetterfinal.png" alt=""> </a>
+        <a href="assets/img/finalsvg.svg" target="_blank"> <img src="assets/img/datavizbetterfinal.png" alt=""> </a>
 
       </div>
 
-      <div class="headPara">
+      <p>
 
-        <h2>Data Viz</h2>
+        This is a visualization is what I saw to be most stark in the data I
+        collected over the week. I seperated the data into different reoccuring
+        feelings over the week. Each emotion firework has an explosion that
+        relates explosion size and level of stress. Each explosion has a colored fragment
+        that is an instance of that genre played. <br><br> I learned there was
+        a significant trend between being happy, listening to Hip-Hop, and
+        having the least amount of stress. The point is that there is correlation
+        even though it may not be incredibly apparent due to the sample size. You
+        could argue that Hip-Hop can invoke and connotes a lighter mood. Perhaps it
+        could then be used to advertise something to me.
 
-        <p>
-
-          DATA Viz PARAGRAPH
-
-        </p>
-
-      </div>
-
-
-
-
+      </p>
 
     </div>
 
-    <div class="section">
+    <div class="section" id="explainedVid">
+
+      <h2>Explained Video</h2>
 
       <div class="image">
 
@@ -87,26 +115,21 @@
 
       </div>
 
-      <div class="headPara">
+      <p>
 
-        <h2>Data Viz</h2>
+        This video is how my own data can be a commodity to influencial
+        companies. I chose to specifically explore <i>data brokering</i> and how
+        the music streaming service I use can be used by Facebook in an effort to create a better
+        experience. <br><br> Facebook's <u>Connect with Facebook</u> service
+        is how my data can become a part of the digitalization of
+        me. Facebook has access to everything I do on their website and with
+        their service they can add different perspectives. In the case of music,
+        since I found that there was a trend within my use, my music choice
+        could potentially add to Facebook's algorithms.
 
-        <p>
-
-          DATA Viz PARAGRAPH
-
-        </p>
-
-      </div>
-
-
-
-
+      </p>
 
     </div>
-
-
-
 
 
   </body>
