Errors on validator with iframe
attributes not allowed

--- a/index.html
+++ b/index.html
@@ -107,9 +107,7 @@
 
       <div class="image">
 
-        <iframe src="https://www.youtube.com/embed/EMvIQ9aiC2k" frameborder="0"
-                  gesture="media" allow="encrypted-media" allowfullscreen>
-        </iframe>
+        <iframe src="https://www.youtube.com/embed/EMvIQ9aiC2k"></iframe>
 
 
 
