Comments and organization

--- a/index.html
+++ b/index.html
@@ -1,18 +1,5 @@
 <!DOCTYPE html>
-<!--
 
-  Index.html
-  - head
-  - body
-    + header
-    +
-
-
-
-
-
-
- -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -30,11 +17,11 @@
     </header>
 
     <p id="intro">
-      This is the three-stage process of how I found my life to be intertwined
+      <strong>This is the three-stage process of how I found my life to be intertwined
       with data, writing, and digital media. I explored how music is an
       example of how something so seemingly unquantifiable can
        display a significant trend and further add to how
-      the internet can infringe on my privacy.
+      the internet can infringe on my privacy.</strong>
     </p>
 
     <div class="section" id="dataCollect">
