--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
 
     </div>
 
+    <ul id="footer">
+
+      <li><a href="https://github.com/JesseTerrazas">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/jesse-terrazas-a0185113b/">LinkedIn</a></li>
+
+    </ul>
 
   </body>
 
