Changes to text and visual sizing

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
       <div class="image">
 
-          <a href="assets/img/data.PNG" target="_blank"> <img src="assets/img/data.PNG" alt=""> </a>
-
+          <a href="assets/img/data.PNG" target="_blank">
+            <img src="assets/img/data.PNG" alt="An image of an google document with the data collected">
+          </a>
 
       </div>
 
@@ -39,17 +40,21 @@
 
 
         <p>
-          To begin to uncover the connection between data and I, I chose
+          To begin to uncover the connection between data and my life, I chose
           to focus on something that has always been, and will always be,
           an integral part of my life: Music. I noticed that throughout my
           day, I listen to all kinds of music. However, my music is
-          constantly interrupted due to scheduled activity. <br><br>I chose to record what song type I listened to and
-          how I felt at that time on a scale of 1-10. I only chose to record the
+          constantly interrupted due to scheduled activity. <br><br>I chose to record what song type
+          I listened to and how I felt at that time on a scale of 1-10. I only chose to record the
           first song of every session because it is chosen and meaningful
-          rather than a shuffle of my playlist. I then added several other factors
+          rather than a shuffle of my playlist. I then recorded several other factors
           such as the time of day, temperature, and stress level. This table is
           the result of consistently recording my music and corresponding mood
-          for a week.
+          for a week. <br><br> I chose something that was routine and therefore
+          easier to record. I made sure to add as much context as I could to my data
+          but also found most of it to be useless because of the lack of a trend. That's ok.
+          Even so, it showed that a lot of what goes unnoticed could be considered as data
+          and possibly used.
 
         </p>
 
@@ -67,7 +72,11 @@
 
       <div class="image">
 
-        <a href="assets/img/finalsvg.svg" target="_blank"> <img src="assets/img/datavizbetterfinal.png" alt=""> </a>
+        <a href="assets/img/finalsvg.svg" target="_blank">
+
+          <img src="assets/img/datavizbetterfinal.png" alt="An image of the visualization of the data collected">
+
+        </a>
 
       </div>
 
@@ -76,13 +85,16 @@
         This is a visualization is what I saw to be most stark in the data I
         collected over the week. I seperated the data into different reoccuring
         feelings over the week. Each emotion firework has an explosion that
-        relates explosion size and level of stress. Each explosion has a colored fragment
-        that is an instance of that genre played. <br><br> I learned there was
+        relates explosion size and level of stress. Each explosion has a colored fragments
+        that are instances of a genre played. <br><br> I learned there was
         a significant trend between being happy, listening to Hip-Hop, and
-        having the least amount of stress. The point is that there is correlation
+        having the least amount of stress. There is correlation
         even though it may not be incredibly apparent due to the sample size. You
-        could argue that Hip-Hop can invoke and connotes a lighter mood. Perhaps it
-        could then be used to advertise something to me.
+        could argue that Hip-Hop can invoke and connotes a lighter mood. <br><br>
+        Perhaps it could then be used to advertise something to me. Perhaps, with
+        Hip-Hop playing in the background, I would be more inclined to buy the
+        service. The point being that my preferences and media use can be quantified
+        and used in some way.
 
       </p>
 
@@ -102,15 +114,25 @@
 
       <p>
 
-        This video is how my own data can be a commodity to influencial
-        companies. I chose to specifically explore <i>data brokering</i> and how
+        This video is how my own data can be a commodity to Facebook.
+        I chose to specifically explore <i>data brokering</i> and how
         the music streaming service I use can be used by Facebook in an effort to create a better
-        experience. <br><br> Facebook's <u>Connect with Facebook</u> service
+        experience.
+
+        <br><br> Facebook's <u>Connect with Facebook</u> service
         is how my data can become a part of the digitalization of
-        me. Facebook has access to everything I do on their website and with
-        their service they can add different perspectives. In the case of music,
-        since I found that there was a trend within my use, my music choice
-        could potentially add to Facebook's algorithms.
+        me. Facebook has access to everything I do on their website. With the
+        addition of their service, they can add different perspectives. This is
+        because all partners of Facebook who provide the account service will
+        receive Facebook's data on you in exchange for their own data on you.
+         In the case of music, since I found that there was a trend within my use, my music choice
+        could potentially add to Facebook's algorithms of advertisement towards me.
+
+        <br><br> Using my music preference is a stretch, but also indicates that this
+        idea can be applied to seemingly arbitrary things. If my music can be quantified,
+        think of how my digital media use could illustrate who I am from different perspectives.
+        Unless I choose to cut out digital media from my life, the collection of
+        what I consider private is inevitable.
 
       </p>
 
@@ -118,8 +140,8 @@
 
     <ul id="footer">
 
-      <li><a href="https://github.com/JesseTerrazas">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/jesse-terrazas-a0185113b/">LinkedIn</a></li>
+      <li><a href="https://github.com/JesseTerrazas" target="_blank">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/jesse-terrazas-a0185113b/" target="_blank">LinkedIn</a></li>
 
     </ul>
 
