--- a/index.html
+++ b/index.html
@@ -44,14 +44,18 @@
           to focus on something that has always been, and will always be,
           an integral part of my life: Music. I noticed that throughout my
           day, I listen to all kinds of music. However, my music is
-          constantly interrupted due to scheduled activity. <br><br>I chose to record what song type
+          constantly interrupted due to scheduled activity.
+
+          <br><br>I chose to record what song type
           I listened to and how I felt at that time on a scale of 1-10. I only chose to record the
           first song of every session because it is chosen and meaningful
           rather than a shuffle of my playlist. I then recorded several other factors
           such as the time of day, temperature, and stress level. This table is
           the result of consistently recording my music and corresponding mood
-          for a week. <br><br> I chose something that was routine and therefore
-          easier to record. I made sure to add as much context as I could to my data
+          for a week.
+
+          <br><br> I chose something that was routine and therefore
+          easier to record. I made sure to add as much context as I could to my data,
           but also found most of it to be useless because of the lack of a trend. That's ok.
           Even so, it showed that a lot of what goes unnoticed could be considered as data
           and possibly used.
@@ -86,11 +90,15 @@
         collected over the week. I seperated the data into different reoccuring
         feelings over the week. Each emotion firework has an explosion that
         relates explosion size and level of stress. Each explosion has a colored fragments
-        that are instances of a genre played. <br><br> I learned there was
+        that are instances of a genre played.
+
+        <br><br> I learned there was
         a significant trend between being happy, listening to Hip-Hop, and
         having the least amount of stress. There is correlation
         even though it may not be incredibly apparent due to the sample size. You
-        could argue that Hip-Hop can invoke and connotes a lighter mood. <br><br>
+        could argue that Hip-Hop can invoke and connotes a lighter mood.
+
+        <br><br>
         Perhaps it could then be used to advertise something to me. Perhaps, with
         Hip-Hop playing in the background, I would be more inclined to buy the
         service. The point being that my preferences and media use can be quantified
